feat: users left join settings
