# doc/api.yaml
@@ -9,37 +9,6 @@ servers:
 
 components:
   schemas:
-    Word:
-      type: object
-      properties:
-        id:
-          type: string
-        group:
-          type: number
-        page:
-          type: number
-        word:
-          type: string
-        image:
-          type: string
-        audio:
-          type: string
-        audioMeaning:
-          type: string
-        audioExample:
-          type: string
-        textMeaning:
-          type: string
-        textExample:
-          type: string
-        transcription:
-          type: string
-        wordTranslate:
-          type: string
-        textMeaningTranslate:
-          type: string
-        textExampleTranslate:
-          type: string
     Pizza:
       type: object
       properties:
@@ -59,33 +28,6 @@ components:
           type: string
         isHit:
           type: boolean
-    UserWord:
-      type: object
-      properties:
-        difficulty:
-          type: string
-        optional:
-          type: object
-          items:
-            type: any
-    Statistic:
-      type: object
-      properties:
-        learnedWords:
-          type: number
-        optional:
-          type: object
-          items:
-            type: any
-    Setting:
-      type: object
-      properties:
-        wordsPerDay:
-          type: number
-        optional:
-          type: object
-          items:
-            type: any
     User:
       type: object
       properties:
@@ -123,58 +65,6 @@ security:
   - bearerAuth: []
 
 paths:
-  /words:
-    parameters:
-      - name: group
-        in: query
-        required: false
-        description: group number
-        schema:
-          type: string
-      - name: page
-        in: query
-        required: false
-        description: page in the group
-        schema:
-          type: string
-    get:
-      tags:
-        - Words
-      security:
-        []
-      summary: Get a chunk of words
-      description: Gets a chunk of words
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Word"
-  /words/{id}:
-    parameters:
-      - name: id
-        description: wordId
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags:
-        - Words
-      security:
-        []
-      summary: Get a word with assets by id
-      description: Gets a word with assets by id
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                  $ref: "#/components/schemas/Word"
   /pizzas:
     get:
       tags:
@@ -334,266 +224,6 @@ paths:
                 $ref: "#/components/schemas/Auth"
         403:
           $ref: '#/components/responses/UnauthenticatedError'
-  /users/{id}/words:
-    parameters:
-      - name: id
-        description: userId
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags:
-        - Users/Words
-      summary: Get all user words
-      description: Gets all user words
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/UserWord"
-        402:
-          $ref: '#/components/responses/UnauthorizedError'
-  /users/{id}/words/{wordId}:
-    parameters:
-      - name: id
-        description: userId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: wordId
-        description: wordId
-        in: path
-        required: true
-        schema:
-          type: string
-    post:
-      tags:
-        - Users/Words
-      summary: Create a user word
-      description: Create a user word by id
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              title: example
-              properties:
-                difficulty:
-                  type: string
-                optional:
-                  type: object
-                  items:
-                    type: any
-      responses:
-        200:
-          description: The user word has been created.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserWord"
-        400:
-          description: Bad request
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-    get:
-      tags:
-        - Users/Words
-      summary: Get a user word by id
-      description: Gets a user word by id
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserWord"
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-        404:
-          description: User's word not found
-    put:
-      tags:
-        - Users/Words
-      summary: Update a user word
-      description: Updates a user word by id
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              title: example
-              properties:
-                difficulty:
-                  type: string
-                optional:
-                  type: object
-                  items:
-                    type: any
-      responses:
-        200:
-          description: The user word has been updated.
-          content:
-            application/json:
-              schema:
-                  $ref: "#/components/schemas/UserWord"
-        400:
-          description: Bad request
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-    delete:
-      tags:
-        - Users/Words
-      summary: Delete user word
-      description: Deletes user words by id
-      responses:
-        204:
-          description: The user word has been deleted
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-  /users/{id}/aggregatedWords:
-    parameters:
-      - name: id
-        description: userId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: group
-        in: query
-        required: false
-        description: group(skip if you want result not depending on a group)
-        schema:
-          type: string
-      - name: page
-        in: query
-        required: false
-        description: page number
-        schema:
-          type: string
-      - name: wordsPerPage
-        in: query
-        required: false
-        description: words per page
-        schema:
-          type: string
-      - name: filter
-        in: query
-        required: false
-        description: Filter by aggreagted word fields. It should be a stringified object which meet MongoDB Query object conditions.<br>
-          Get all words that have difficulte="hard AND optional.key="value <pre>{"$and":[{"userWord.difficulty":"hard", "userWord.optional.key":"value"}]}</pre><br>
-          Get all words that have difficulty equal="easy" OR do not have the linked userWord <pre>{"$or":[{"userWord.difficulty":"easy"},{"userWord":null}]}</pre><br>
-          Get all words that have BOTH difficulty equal="easy" AND optional.repeat=true, OR do not have the linked userWord <pre>{"$or":[{"$and":[{"userWord.difficulty":"easy", "userWord.optional.repeat":true}]},{"userWord":null}]}</pre><br>
-        schema:
-          type: string
-    get:
-      tags:
-        - Users/AggregatedWords
-      summary: Get all user aggregated words
-      description: Gets all user aggregated words
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Word"
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-  /users/{id}/aggregatedWords/{wordId}:
-    parameters:
-      - name: id
-        description: userId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: wordId
-        description: wordId
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags:
-        - Users/AggregatedWords
-      summary: Get a user aggregated word by id
-      description: Gets a user aggregated word by id
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserWord"
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-        404:
-          description: User's word not found
-  /users/{id}/statistics:
-    parameters:
-      - name: id
-        description: userId
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags:
-        - Users/Statistic
-      summary: Get statistics
-      description: Gets statistics
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                  $ref: "#/components/schemas/Statistic"
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-        404:
-          description: Statistics not found
-    put:
-      tags:
-        - Users/Statistic
-      summary: Upsert statistics
-      description: Upserts new statistics
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              title: example
-              properties:
-                learnedWords:
-                  type: number
-                  description: The number of the total learned words
-                optional:
-                  type: object
-                  items:
-                    type: any
-      responses:
-        200:
-          description: The statistics has been created.
-          content:
-            application/json:
-              schema:
-                  $ref: "#/components/schemas/Statistic"
-        400:
-          description: Bad request
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
   /users/{id}/settings:
     parameters:
       - name: id
